[gd_scene load_steps=14 format=2]

[ext_resource path="res://App/Interface/Loading/Loading.tscn" type="PackedScene" id=1]
[ext_resource path="res://App/Modules/Screens/Import/ImportScreen.gd" type="Script" id=2]
[ext_resource path="res://App/Interface/DummyContainer/DummyContainer.gd" type="Script" id=3]
[ext_resource path="res://App/Interface/Track/List/TrackListView.tscn" type="PackedScene" id=4]
[ext_resource path="res://App/Interface/DropContainer/DropContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://App/Modules/Screens/Import/SearchContainer.gd" type="Script" id=6]
[ext_resource path="res://App/Icons/generic_down.svg" type="Texture" id=7]
[ext_resource path="res://App/Interface/IconButton/IconButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://App/Modules/Screens/Import/FilesContainer.gd" type="Script" id=9]
[ext_resource path="res://App/Icons/generic_search.svg" type="Texture" id=10]
[ext_resource path="res://App/Icons/menu_import.svg" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ImportScreen" type="PanelContainer"]
margin_right = 400.0
margin_bottom = 400.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 393.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 370.0
margin_bottom = 370.0
custom_constants/separation = 8

[node name="FilesButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 20.0
text = "IMPORT_FILES"
icon = ExtResource( 11 )
expand_icon = true

[node name="SearchButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 354.0
margin_bottom = 48.0
text = "IMPORT_SEARCH"
icon = ExtResource( 10 )
expand_icon = true

[node name="FilesContainer" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 393.0
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="FilesContainer"]
visible = false
margin_top = 386.0
margin_right = 386.0
margin_bottom = 772.0

[node name="MarginContainer" type="MarginContainer" parent="FilesContainer/VBoxContainer"]
margin_right = 386.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="FilesContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 378.0
margin_bottom = 32.0

[node name="Drop" parent="FilesContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 2
texture = ExtResource( 7 )
icon_size = 0.75

[node name="Import" type="Button" parent="FilesContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 244.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "IMPORT_ADD_FILES"

[node name="TrackListView" parent="FilesContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 386.0
margin_bottom = 386.0
size_flags_vertical = 3

[node name="Files" type="Control" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 393.0
mouse_filter = 2

[node name="FileDialog" type="FileDialog" parent="Files"]
margin_right = 434.0
margin_bottom = 400.0
window_title = "Open a File or Directory"
resizable = true
mode = 3
access = 2
filters = PoolStringArray( "*.mp3 ; MP3 Audio", "*.ogg ; OGG Vorbis Audio" )
current_dir = "/home/nathan/workspace/personal/open-player"
current_path = "/home/nathan/workspace/personal/open-player/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilesLoading" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 393.0

[node name="Label" type="Label" parent="FilesLoading"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "IMPORT_FILES_LOADING"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchContainer" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 393.0
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="SearchContainer"]
visible = false
margin_top = 386.0
margin_right = 386.0
margin_bottom = 772.0

[node name="MarginContainer" type="MarginContainer" parent="SearchContainer/VBoxContainer"]
margin_right = 386.0
margin_bottom = 40.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="SearchContainer/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 378.0
margin_bottom = 32.0

[node name="Drop" parent="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 2
texture = ExtResource( 7 )
icon_size = 0.75

[node name="SearchBox" type="LineEdit" parent="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 370.0
margin_bottom = 24.0
focus_mode = 1
size_flags_horizontal = 3
custom_styles/focus = SubResource( 1 )
placeholder_text = "SEARCH_PLACEHOLDER"
caret_blink = true
caret_blink_speed = 0.5

[node name="RequestTimer" type="Timer" parent="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer/SearchBox"]
one_shot = true

[node name="Results" type="PanelContainer" parent="SearchContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 386.0
margin_bottom = 386.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
script = ExtResource( 3 )

[node name="TrackListView" parent="SearchContainer/VBoxContainer/Results" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 386.0
margin_bottom = 342.0

[node name="LoadingContainer" type="CenterContainer" parent="SearchContainer/VBoxContainer/Results"]
margin_right = 386.0
margin_bottom = 342.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" parent="SearchContainer/VBoxContainer/Results/LoadingContainer" instance=ExtResource( 1 )]
margin_left = 193.0
margin_top = 139.0
margin_right = 193.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 2

[connection signal="visibility_changed" from="." to="." method="_on_ImportScreen_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilesButton" to="." method="_on_FilesButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="visibility_changed" from="FilesContainer" to="FilesContainer" method="_on_FilesContainer_visibility_changed"]
[connection signal="pressed" from="FilesContainer/VBoxContainer/MarginContainer/HBoxContainer/Drop" to="." method="_on_FilesDrop_pressed"]
[connection signal="pressed" from="FilesContainer/VBoxContainer/MarginContainer/HBoxContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="dir_selected" from="Files/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="Files/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="visibility_changed" from="SearchContainer/VBoxContainer" to="SearchContainer" method="_on_VBoxContainer_visibility_changed"]
[connection signal="pressed" from="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer/Drop" to="." method="_on_SearchDrop_pressed"]
[connection signal="text_changed" from="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer/SearchBox" to="SearchContainer" method="_on_SearchBox_text_changed"]
[connection signal="text_entered" from="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer/SearchBox" to="SearchContainer" method="_on_SearchBox_text_entered"]
[connection signal="timeout" from="SearchContainer/VBoxContainer/MarginContainer/HBoxContainer/SearchBox/RequestTimer" to="SearchContainer" method="_on_RequestTimer_timeout"]
